# nonameos

./: Makefile  README.md  build.ps1  build.sh
bootloader/: boot.asm  grub.cfg
kernel/: Cargo.toml
kernel/src/: font8x16.raw  framebuffer.rs  gdt.rs  idt.rs  ipc.rs  keyboard.rs  ktest.rs  lib.rs  loader.rs  multiboot2.rs  pic.rs  scheduler.rs  serial.rs  syscall.rs  task.rs  userspace.rs  vga.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/bus/: mod.rs  pci.rs
kernel/src/drivers/linux_shim/: mod.rs
kernel/src/memory/: mod.rs  paging.rs  phys.rs
kernel/src/vfs/: mod.rs  ramfs.rs
kernel/src/win32/: error.rs  mod.rs  ntapi.rs  object.rs  pe.rs  subsys.rs  types.rs
linker/: kernel.ld
