[package]
name = "nonameos_kernel"
version = "0.1.0"
edition = "2021"
authors = ["NoNameOS Contributors"]
description = "NoNameOS Microkernel — Rust, no_std, x86_64"

[lib]
crate-type = ["staticlib"]

[dependencies]
spin = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 2
